--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -34,5 +34,5 @@ jobs:
         uses: peter-evans/dockerhub-description@v2
         with:
           username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           repository: raykrueger/valheim
